crates/lang-parse/tests/snapshots/parser__parser_one-tuple.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x8cb4c9ee56b03fd7",
        output_hash: "0xe454f522e476e323",
        tree: (
            span: (
                start: 0,
                end: 4,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 4,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 4,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Tuple((
                        span: (
                            start: 0,
                            end: 4,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        values: [
                            (
                                span: (
                                    start: 1,
                                    end: 2,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                id: None,
                                expr: Literal((
                                    span: (
                                        start: 1,
                                        end: 2,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    literal: Integer((
                                        span: (
                                            start: 1,
                                            end: 2,
                                        ),
                                        value: "1",
                                    )),
                                )),
                            ),
                        ],
                    )),
                )),
            ),
        ),
    ),
)
---
