crates/lang-parse/tests/snapshots/parser__parser_partially named tuple.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 10015345224980823682,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 17,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 17,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 17,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: Tuple((
                            span: (
                                start: 0,
                                end: 17,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            values: [
                                (
                                    span: (
                                        start: 1,
                                        end: 4,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    id: None,
                                    expr: Literal((
                                        span: (
                                            start: 1,
                                            end: 4,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: String((
                                            span: (
                                                start: 1,
                                                end: 4,
                                            ),
                                            content: "a",
                                        )),
                                    )),
                                ),
                                (
                                    span: (
                                        start: 6,
                                        end: 16,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    id: Some((
                                        span: (
                                            start: 6,
                                            end: 12,
                                        ),
                                        name: "length",
                                    )),
                                    expr: Literal((
                                        span: (
                                            start: 15,
                                            end: 16,
                                        ),
                                        extras: (
                                            leading: ([]),
                                            trailing: ([]),
                                        ),
                                        literal: Integer((
                                            span: (
                                                start: 15,
                                                end: 16,
                                            ),
                                            value: 1,
                                            raw: "1",
                                        )),
                                    )),
                                ),
                            ],
                        )),
                    )),
                ),
            ),
            hash: 10234119854191533114,
        ),
    ),
)
---
