crates/lang-parse/tests/snapshots/parser__parser_percent unit.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0xb3e9b0a8a8fea8f",
        output_hash: "0x133929a53ed8d041",
        tree: (
            span: (
                start: 0,
                end: 2,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 2,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 2,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 2,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: Quantity((
                            span: (
                                start: 0,
                                end: 2,
                            ),
                            value: "1",
                            unit: (
                                span: (
                                    start: 1,
                                    end: 2,
                                ),
                                name: "%",
                            ),
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
