crates/lang-parse/tests/snapshots/parser__parser_plain string in expr.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x6f21158ea1c9f03f",
        output_hash: "0x6ee6098fd76612ef",
        tree: (
            span: (
                start: 0,
                end: 38,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 38,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (LocalAssignment((
                        span: (
                            start: 0,
                            end: 37,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        id: (
                            span: (
                                start: 0,
                                end: 1,
                            ),
                            name: "a",
                        ),
                        ty: None,
                        expr: BinaryOperation((
                            span: (
                                start: 4,
                                end: 37,
                            ),
                            lhs: Literal((
                                span: (
                                    start: 4,
                                    end: 34,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([
                                        Whitespace((" ")),
                                    ]),
                                ),
                                literal: String((
                                    span: (
                                        start: 4,
                                        end: 33,
                                    ),
                                    content: "plain string int expression",
                                )),
                            )),
                            op: (
                                span: (
                                    start: 34,
                                    end: 35,
                                ),
                                value: Add,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 36,
                                    end: 37,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 36,
                                        end: 37,
                                    ),
                                    value: "1",
                                )),
                            )),
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
