crates/lang-parse/tests/snapshots/parser__parser_plain string.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x65c7b83f49b5c2b8",
        output_hash: "0xea6a2744c495abdd",
        tree: (
            span: (
                start: 0,
                end: 14,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 14,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [],
                tail: Some((
                    span: (
                        start: 0,
                        end: 14,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    attr: ([]),
                    expr: Literal((
                        span: (
                            start: 0,
                            end: 14,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        literal: String((
                            span: (
                                start: 0,
                                end: 14,
                            ),
                            content: "plain string",
                        )),
                    )),
                )),
            ),
        ),
    ),
)
---
