crates/lang-parse/tests/snapshots/parser__parser_pub assignment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: parse(input)
---
Ok(
    Ast {
        span: 0..12,
        statements: StatementList {
            span: 0..12,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    Const(
                        Constant {
                            span: 0..11,
                            keyword_span: 0..3,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            doc: DocBlock {
                                span: 0..12,
                                lines: [],
                            },
                            attr: [],
                            vis: Some(
                                Spanned {
                                    span: 0..3,
                                    value: Public,
                                },
                            ),
                            id: Identifier {
                                span: 4..7,
                                name: "FOO",
                            },
                            ty: None,
                            expr: Literal(
                                Literal {
                                    span: 10..11,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 10..11,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
